--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "bootstrap": "^5.0.1",
     "dotenv": "^9.0.2",
     "mapbox-gl": "^2.3.0",
-    "next": "latest",
+    "next": "^12.3.7",
     "nvm": "^0.0.4",
     "photoswipe": "^4.1.3",
     "react": "^17.0.2",
@@ -38,14 +38,15 @@
     "style-loader": "^2.0.0",
     "styled-components": "^5.3.0",
     "swiper": "^6.6.2",
-    "typescript": "latest"
+    "typescript": "latest",
+    "packageManager": "yarn@3.6.4"
+
   },
   "scripts": {
-
-"dev": "set NODE_OPTIONS=--openssl-legacy-provider && next dev",
-  "build": "set NODE_OPTIONS=--openssl-legacy-provider && next build",
-  "start": "set NODE_OPTIONS=--openssl-legacy-provider && next start"
- },
+    "dev": "set NODE_OPTIONS=--openssl-legacy-provider && next dev",
+    "build": "set NODE_OPTIONS=--openssl-legacy-provider && next build",
+    "start": "set NODE_OPTIONS=--openssl-legacy-provider && next start"
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
