--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "author": {
     "email": "timbusiness.work07@gmail.com",
-    "name": "Tim",
+    "name": "Tim"
      
   },
   "contributors": [
